# Verbiverse

./: .gitignore  README.md  RoadMap.md  build.py  command_alias  main.py  main.spec  pyproject.toml
.github/workflows/: ubuntu_packet.yml  windows_packet.yml
PDF_js/web/: viewer.mjs
UI/: ChatWidget.py  ChatWidget.ui  ChatWidget_ui.py  ChatWindow.py  ChatWindow.ui  HomeInterface.py  MainWindow.py  MainWindow.ui  MessageBox.py  MessageBox.ui  MessageBox_ui.py  ReadAndChatWidget.py  ReadAndChatWidget.ui  ReadAndChatWidget_ui.py  Setting.py  SettingInterface.py  __init__.py
app/config/: config.json
icons/web/: site.webmanifest
resources/: resources.qrc  resources_rc.py
resources/i18n/: verbiverse.zh_CN.ts
resources/prompt/: check_CN.txt
src/: __init__.py
src/CustomWidgets/: CBodyLabel.py  CContexMenu.py  CMenu.py  CWebView.py  LinkCard.py  StyleSheet.py  WebView.py  __init__.py
src/Functions/: Config.py  SignalBus.py  WebChannelBridge.py
tests/: loader.py  test_ChatChain.py  test_WordsBook.py  test_asyncio.py  test_edge-tts.py  test_flyout.py  test_listwidget.py  test_str.py  test_table.py  test_translate.py
tests/qm/: 1111.TMP.zh_CN.ts  2222.TMP.zh_CN.ts  3333.TMP.zh_CN.ts  result.qm  result.ts  test.py
tools/: example.py  prompt_ctrl.py  prompt_maker.py  template.json
verbiverse/: ChatBox.py  ChatLLM.py  ChatLLMWithHistory.py  ChatWorkerThread.py  CustomLabelMenu.py  LLMServerInfo.py  LoadPdfText.py  MainWindow.py  Message.py  MessageBoxWidget.py  TranslateInfoWindow.py  WebPdfView.py  WordsBookDatabase.py  __init__.py  test.py  test.txt  test2.py
verbiverse/CustomWidgets/: AudioPlayer.py  AudioPlayer.ui  AudioPlayer_ui.py  CBaseWindow.py  CBodyLabel.py  CContexMenu.py  CFileListWidget.py  CFileListWidget.ui  CFileListWidget_ui.py  CSubtitleLabel.py  (+12 more)
(+114 files in other folders)
