[tool.poetry]
name = "verbiverse"
version = "0.4.0"
description = ""
authors = ["Layton <caolei6767@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13, >=3.9"
langchain-openai = "^0.1.17"
langchain = "^0.2.11"
langchainhub = "^0.1.20"
langchain-community = "^0.2.10"
langchain-text-splitters = "^0.2.2"
langchain-chroma = "^0.1.2"
pypdf = "^4.2.0"
dashscope = "^1.20.3"
pyside6-fluent-widgets = {extras = ["full"], version = "^1.6.0"}
pebble = "^5.0.7"
pyside6 = "6.6.2"
pyinstaller = "^6.9.0"
pysrt = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
